# chip8emu

./: .gitignore  CMakeLists.txt  README.md
src/: chip8.c  chip8.h  chip8IO.c  chip8IO.h  main.c  stack.c  stack.h
